--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <!-- the entire body must be written by student -->
+    <button id="download-images-button">Download Images</button>
     <div id="output"></div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
+
 </html>
